# tinder-clone-example

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  Dockerfile  INSTRUCTIONS_FOR_AI.md  LICENSE  README.md  ROADMAP.md  cli.py  main.py  pyproject.toml
.agent/skills/microcoreos-architecture/: SKILL.md  agent.md
.agent/workflows/: new-domain.md
.github/workflows/: ci.yml
core/: base_plugin.py  base_tool.py  container.py  context.py  kernel.py  registry.py
dev_infra/: docker-compose.yml
docs/translations/es/: README.md
domains/discovery/plugins/: daily_picks_plugin.py  get_discovery_feed_plugin.py
domains/matches/migrations/: 001_create_matches_table.sql
domains/matches/models/: match.py
domains/matches/plugins/: check_match_plugin.py  get_matches_plugin.py  unmatch_plugin.py
domains/messages/migrations/: 001_create_messages_table.sql
domains/messages/models/: message.py
domains/messages/plugins/: chat_ws_plugin.py  get_messages_plugin.py  mark_message_read_plugin.py  send_message_plugin.py
domains/moderation/: __init__.py
domains/profiles/models/: photo.py  (+2 more)
tests/: test_core.py  test_create_user.py
tools/auth/: auth_tool.py
tools/compatibility/: compatibility_tool.py
tools/config/: config_tool.py
tools/context/: context_tool.py
tools/event_bus/: event_bus_tool.py
tools/http_server/: http_server_tool.py
tools/logger/: logger_tool.py
tools/scheduler/: scheduler_tool.py
tools/sqlite/: sqlite_tool.py
tools/state/: state_tool.py
tools/system/: registry_tool.py
tools/telemetry/: telemetry_tool.py
(+63 files in other folders)
